// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders correctly 1`] = `
<DocumentFragment>
  .cache-1yrf4lq-StyledTable {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.cache-6z2yke-StyledHead {
  border-bottom: 1px solid #d4dae7;
}

.cache-1wx805j-StyledRow {
  color: #4a4f62;
}

.cache-1wx805j-StyledRow a {
  color: inherit;
}

.cache-1wx805j-StyledRow [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.cache-1wx805j-StyledRow:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.cache-17yd00x-StyledHeadCell-sharedCellStyle {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 20px;
}

.cache-1bi7edk-StyledTBody[data-striped='true'] .efhaznt4:nth-of-type(even) {
  background-color: #f6f6f8;
}

.cache-s0ztax-StyledBodyCell-sharedCellStyle {
  overflow: hidden;
  white-space: nowrap;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 20px;
}

<table
    class="cache-1yrf4lq-StyledTable efhaznt6"
  >
    <thead
      class="cache-6z2yke-StyledHead efhaznt5"
    >
      <tr
        class="cache-1wx805j-StyledRow efhaznt4"
      >
        <th
          class="cache-17yd00x-StyledHeadCell-sharedCellStyle efhaznt3"
        >
          ID
        </th>
        <th
          class="cache-17yd00x-StyledHeadCell-sharedCellStyle efhaznt3"
        >
          Status
        </th>
        <th
          class="cache-17yd00x-StyledHeadCell-sharedCellStyle efhaznt3"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody
      class="cache-1bi7edk-StyledTBody efhaznt0"
      data-striped="false"
    >
      <tr
        class="cache-1wx805j-StyledRow efhaznt4"
      >
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt2"
        >
          165
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt2"
        >
          Ongoing
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt2"
        >
          Yesterday
        </td>
      </tr>
      <tr
        class="cache-1wx805j-StyledRow efhaznt4"
      >
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt2"
        >
          56
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt2"
        >
          Resolved
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt2"
        >
          1 hour ago
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Table renders correctly while loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-1yrf4lq-StyledTable {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.cache-6z2yke-StyledHead {
  border-bottom: 1px solid #d4dae7;
}

.cache-1wx805j-StyledRow {
  color: #4a4f62;
}

.cache-1wx805j-StyledRow a {
  color: inherit;
}

.cache-1wx805j-StyledRow [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.cache-1wx805j-StyledRow:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.cache-17yd00x-StyledHeadCell-sharedCellStyle {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 20px;
}

.cache-1bi7edk-StyledTBody[data-striped='true'] .efhaznt4:nth-of-type(even) {
  background-color: #f6f6f8;
}

.cache-15mp5sh-StyledRow-StyledLoadingRow {
  color: #4a4f62;
  cursor: progress;
}

.cache-15mp5sh-StyledRow-StyledLoadingRow a {
  color: inherit;
}

.cache-15mp5sh-StyledRow-StyledLoadingRow [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.cache-15mp5sh-StyledRow-StyledLoadingRow:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.cache-s0ztax-StyledBodyCell-sharedCellStyle {
  overflow: hidden;
  white-space: nowrap;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 20px;
}

.cache-bgbcvp-StyledContainer {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
}

.cache-1r88wor-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 10px;
  background-color: #d4dae7;
}

.cache-q3qai6-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #ffffff00,
      #ffffff4D,
      #ffffff66,
      #ffffff4D,
      #ffffff00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-q3qai6-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<table
    class="cache-1yrf4lq-StyledTable efhaznt6"
  >
    <thead
      class="cache-6z2yke-StyledHead efhaznt5"
    >
      <tr
        class="cache-1wx805j-StyledRow efhaznt4"
      >
        <th
          class="cache-17yd00x-StyledHeadCell-sharedCellStyle efhaznt3"
        >
          ID
        </th>
        <th
          class="cache-17yd00x-StyledHeadCell-sharedCellStyle efhaznt3"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody
      class="cache-1bi7edk-StyledTBody efhaznt0"
      data-striped="false"
    >
      <tr
        class="efhaznt1 cache-15mp5sh-StyledRow-StyledLoadingRow efhaznt4"
      >
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt2"
        >
          <div
            class="cache-bgbcvp-StyledContainer e3aa5lq1"
          >
            <div
              class="cache-1r88wor-Line e15slp7a0"
            />
            <div
              class="cache-q3qai6-StyledDiv e3aa5lq0"
            />
          </div>
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt2"
        >
          <div
            class="cache-bgbcvp-StyledContainer e3aa5lq1"
          >
            <div
              class="cache-1r88wor-Line e15slp7a0"
            />
            <div
              class="cache-q3qai6-StyledDiv e3aa5lq0"
            />
          </div>
        </td>
      </tr>
      <tr
        class="efhaznt1 cache-15mp5sh-StyledRow-StyledLoadingRow efhaznt4"
      >
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt2"
        >
          <div
            class="cache-bgbcvp-StyledContainer e3aa5lq1"
          >
            <div
              class="cache-1r88wor-Line e15slp7a0"
            />
            <div
              class="cache-q3qai6-StyledDiv e3aa5lq0"
            />
          </div>
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt2"
        >
          <div
            class="cache-bgbcvp-StyledContainer e3aa5lq1"
          >
            <div
              class="cache-1r88wor-Line e15slp7a0"
            />
            <div
              class="cache-q3qai6-StyledDiv e3aa5lq0"
            />
          </div>
        </td>
      </tr>
      <tr
        class="efhaznt1 cache-15mp5sh-StyledRow-StyledLoadingRow efhaznt4"
      >
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt2"
        >
          <div
            class="cache-bgbcvp-StyledContainer e3aa5lq1"
          >
            <div
              class="cache-1r88wor-Line e15slp7a0"
            />
            <div
              class="cache-q3qai6-StyledDiv e3aa5lq0"
            />
          </div>
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt2"
        >
          <div
            class="cache-bgbcvp-StyledContainer e3aa5lq1"
          >
            <div
              class="cache-1r88wor-Line e15slp7a0"
            />
            <div
              class="cache-q3qai6-StyledDiv e3aa5lq0"
            />
          </div>
        </td>
      </tr>
      <tr
        class="efhaznt1 cache-15mp5sh-StyledRow-StyledLoadingRow efhaznt4"
      >
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt2"
        >
          <div
            class="cache-bgbcvp-StyledContainer e3aa5lq1"
          >
            <div
              class="cache-1r88wor-Line e15slp7a0"
            />
            <div
              class="cache-q3qai6-StyledDiv e3aa5lq0"
            />
          </div>
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt2"
        >
          <div
            class="cache-bgbcvp-StyledContainer e3aa5lq1"
          >
            <div
              class="cache-1r88wor-Line e15slp7a0"
            />
            <div
              class="cache-q3qai6-StyledDiv e3aa5lq0"
            />
          </div>
        </td>
      </tr>
      <tr
        class="efhaznt1 cache-15mp5sh-StyledRow-StyledLoadingRow efhaznt4"
      >
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt2"
        >
          <div
            class="cache-bgbcvp-StyledContainer e3aa5lq1"
          >
            <div
              class="cache-1r88wor-Line e15slp7a0"
            />
            <div
              class="cache-q3qai6-StyledDiv e3aa5lq0"
            />
          </div>
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt2"
        >
          <div
            class="cache-bgbcvp-StyledContainer e3aa5lq1"
          >
            <div
              class="cache-1r88wor-Line e15slp7a0"
            />
            <div
              class="cache-q3qai6-StyledDiv e3aa5lq0"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
